--- a/FrontendMonitoring/Components/Layout/NavMenu.razor
+++ b/FrontendMonitoring/Components/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
     <MudNavLink Href="dashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Dashboard</MudNavLink>
     <MudNavLink Href="predictions" Icon="@Icons.Material.Filled.PsychologyAlt">AI Voorspellingen</MudNavLink>
     <MudNavLink Href="statistics" Icon="@Icons.Material.Filled.BarChart">Statistieken</MudNavLink>
-    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Weather</MudNavLink>
+    <MudNavLink Href="weather" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Huidig weer</MudNavLink>
     <MudNavLink Href="how-it-works" Icon="@Icons.Material.Filled.Help">Hoe werkt het?</MudNavLink>
     <MudNavLink Href="/ai-chat" Icon="@Icons.Material.Filled.SmartToy" Match="NavLinkMatch.All">
         AI Analyse Chat
