--- a/FrontendMonitoring/Components/LeafletScripts.razor
+++ b/FrontendMonitoring/Components/LeafletScripts.razor
@@ -1,7 +1,10 @@
 ﻿@* LeafletScripts.razor *@
 <HeadContent>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
 </HeadContent>
 
 <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+<script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
 <script src="mapInterop.js"></script>
